application_development/Training/networkPolicies/http-go-pods-for-networkPolicy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-go-v1
  labels:
    app: http-go-v1
spec:
  containers:
  - name: http-go
    image: gasbugs/http-go:v1
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: http-go-v2
  labels:
    app: http-go-v2
spec:
  containers:
  - name: http-go
    image: gasbugs/http-go:v2
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: http-go-v3
  labels:
    app: http-go-v3
spec:
  containers:
  - name: http-go
    image: gasbugs/http-go:v3
    ports:
    - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: http-go-v1
spec:
  selector:
    app: http-go-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-go-v2
spec:
  selector:
    app: http-go-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-go-v3
spec:
  selector:
    app: http-go-v3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
