application_development/Training/networkPolicies/networkpolices_http_go.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-go-v1-policy
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: http-go-v1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: http-go-v2
    ports:
    - protocol: TCP
      port: 8080
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-go-v2-policy
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: http-go-v2
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: http-go-v3
    ports:
    - protocol: TCP
      port: 8080
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-go-v3-policy
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: http-go-v3
